# box-ui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/icons/: icon.xcf
assets/macos/: Info.plist.template
box-ui-helper/: Cargo.toml
box-ui-helper/src/: handler.rs  main.rs  unix.rs
box-ui-ipc/: Cargo.toml
box-ui-ipc/src/: lib.rs
scripts/: build-release.sh
src/: app.rs  fonts.rs  main.rs
src/core/: autostart.rs  download.rs  helper_client.rs  helper_install.rs  kernel.rs  mod.rs  permissions.rs  platform.rs  settings.rs
src/ui/: connections.rs  dashboard.rs  logs.rs  mod.rs  outbounds.rs  settings.rs
src/ui/dashboard/: config.rs  kernel.rs  mod.rs  traffic.rs
