[workspace]
members = [".", "box-ui-helper", "box-ui-ipc"]
resolver = "2"

[package]
name = "box-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
box-ui-ipc = { path = "box-ui-ipc" }
chrono = "0.4.44"
dirs = "6.0.0"
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = "0.34.1"
egui_plot = "0.35.0"
flate2 = "1.1.9"
futures-util = "0.3.32"
indexmap = { version = "2.13.0", features = ["serde"] }
libc = "0.2.183"
open = "5.3.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rfd = "0.17.2"
ringbuffer = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.29.0", features = ["connect"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tray-icon = "0.21.3"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
zip = "8.4.0"
