[workspace]
members = ["."]
resolver = "2"

[workspace.package]
version = "0.4.0"

[package]
name = "box-ui"
version.workspace = true
edition = "2024"

[dependencies]
dhat = { version = "0.3.3", optional = true }
dirs = "6.0.0"
eframe = { version = "0.34.1" }
egui = "0.34.1"
egui_extras = "0.34.1"
egui_plot = "0.35.0"
flate2 = "1.1.9"
futures-util = "0.3.32"
indexmap = { version = "2.13.0", features = ["serde"] }
libc = "0.2.183"
open = "5.3.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tokio = { version = "1.44", features = ["rt", "time", "io-util", "fs"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.29.0", features = ["connect"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-tracy = { version = "0.11.4", optional = true }
tray-icon = "0.21.3"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
zip = "8.4.0"

[profile.release]
#strip = true
panic = "abort"
lto = "thin"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Security", "Win32_System_JobObjects", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winresource = "0.1.31"

[features]
default = []
profile = ["dep:tracing-tracy"]
heap-profile = ["dep:dhat"]
