[package]
name = "box-ui-helper"
version.workspace = true
edition = "2024"

[dependencies]
box-ui-ipc = { path = "../box-ui-ipc" }
libc = "0.2.183"
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt", "net", "io-util", "sync", "signal", "process", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
